--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=e5ba98d568f3325baae9c349278a28cc
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/jucoindb?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/jucoindb?serverVersion=mariadb-10.4.25&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
