--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
-        "symfony/flex": "^1.17|^2",
+        "symfony/flex": "^2.2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.47",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
+        "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "5.4.*"
     },
     "config": {
